# icloud-photos-sync

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  icloud_sync.py  install.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  release_smoke_checklist.md
.github/workflows/: ci.yml  homebrew-bump.yml
docs/: faq.md  launch.md  operations.md  release.md  roadmap.md
icloud_photo_backup/: __init__.py  auth.py  cli.py  config.py  db.py  errors.py  logging_utils.py  paths.py  sync.py
tests/: test_auth.py  test_cli.py  test_config.py  test_db.py  test_icloud_sync.py  test_paths.py  test_sync_cursor_future_dates.py  test_sync_progress.py
