[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icloud-photo-backup"
version = "1.2.3"
description = "Incremental iCloud Photos backup CLI for macOS"
requires-python = ">=3.10"
dependencies = [
  "pyicloud",
  "keyring",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
ipb = "icloud_photo_backup.cli:main"
